--- a/plugin.xml
+++ b/plugin.xml
@@ -9,8 +9,8 @@
 	      <action
              action="com.siemens.bt.jazz.workitemeditor.rtcGitConnector.RunConnector"
              iconContext="com.siemens.bt.jazz.workitemeditor.rtcGitConnector"
-             iconDisabledUri="images/git-icon.png"
-             iconUri="images/git-icon.png"
+             iconDisabledUri="images/icons/git-icon.png"
+             iconUri="images/icons/git-icon.png"
              id="runconnector.action"
              isMenuAction="true"
              label="Connect with Git">
