--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
     "dependencies": {
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
-        "gzip-js": "^0.3.2"
+        "github": "^13.0.1",
+        "gzip-js": "^0.3.2",
+        "net": "^1.0.2",
+        "tls": "0.0.1"
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
+        "uglifyjs-webpack-plugin": "^1.1.4",
         "webpack": "^3.6.0"
     },
     "scripts": {
-        "build": "webpack --optimize-minimize"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
