--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
         "buffer": "^5.0.7",
         "github": "^13.0.1",
         "gzip-js": "^0.3.2",
-        "net": "^1.0.2",
-        "tls": "0.0.1"
+        "node-gitlab-api": "^2.1.1"
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
