--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "buffer": "^5.0.7",
         "github": "^13.0.1",
         "gzip-js": "^0.3.2",
-        "node-gitlab-api": "^2.1.1"
+        "node-gitlab-api": "git+https://github.com/MartinBenninger/node-gitlab-api.git"
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
@@ -16,6 +16,7 @@
         "webpack": "^3.6.0"
     },
     "scripts": {
+        "postinstall": "cd ./node_modules/node-gitlab-api && npm install && npm run build",
         "build": "webpack"
     },
     "repository": {
