--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "buffer": "^5.0.7",
         "github": "^13.0.1",
         "gzip-js": "^0.3.2",
-        "node-gitlab-api": "git+https://github.com/jdalrymple/node-gitlab-api.git#1e7d02eaf4b38bc6e4da258388ad78f780b24629"
+        "node-gitlab-api": "^2.2.3"
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
