update .gitignore to ignore jazz specific files

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ node_modules/
 *.log
 /com.siemens.bt.jazz.workitemeditor.rtcGitConnector*.zip
 resources/dist/
+jbe-build-wrapper.xml
+deployment-properties.ini
