Implement rich hover capable links (#3)
* Enable scripts to run without global install
* Ignore jetbrains files
* Add service to model and url
* Add type to issue model for easy url creation
* Add project id and iid to issue model
* Implement merge request link format
* Remove done todos

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ node_modules/
 *.log
 /com.siemens.bt.jazz.workitemeditor.rtcGitConnector*.zip
 resources/dist/
+.idea/
+*.iml
 jbe-build-wrapper.xml
 deployment-properties.ini
