--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
-        "@fortawesome/fontawesome-free-webfonts": "^1.0.3",
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
         "github": "^13.0.1",
@@ -12,15 +11,12 @@
         "node-gitlab-api": "^2.2.3"
     },
     "devDependencies": {
-        "copyfiles": "^1.2.0",
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "uglifyjs-webpack-plugin": "^1.1.4",
         "webpack": "^3.6.0"
     },
     "scripts": {
-        "postinstall": "npm run -s build-gitlab-api && npm run -s copy-fonts",
-        "build-gitlab-api": "cd ./node_modules/node-gitlab-api && npm install && npm run build",
-        "copy-fonts": "node ./node_modules/copyfiles/copyfiles -f ./node_modules/@fortawesome/fontawesome-free-webfonts/css/* ./resources/fontawesome",
+        "postinstall": "cd ./node_modules/node-gitlab-api && npm install && npm run build",
         "build": "node ./node_modules/webpack/bin/webpack.js"
     },
     "repository": {
