--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
+        "@fortawesome/fontawesome": "^1.1.3",
+        "@fortawesome/fontawesome-free-solid": "^5.0.6",
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
         "github": "^13.0.1",
