--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.3",
         "@fortawesome/fontawesome-free-solid": "^5.0.6",
+        "@octokit/rest": "^15.2.6",
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
-        "github": "^13.0.1",
         "gzip-js": "^0.3.2",
         "node-gitlab-api": "^2.2.3"
     },
