--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "uglifyjs-webpack-plugin": "^1.1.4",
-        "webpack": "^3.6.0"
+        "webpack": "^4.12.0",
+        "webpack-cli": "^3.0.8"
     },
     "scripts": {
         "postinstall": "cd ./node_modules/node-gitlab-api && npm install && npm run build",
