--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "node-gitlab-api": "^2.2.3"
     },
     "devDependencies": {
+        "babel-cli": "^6.26.0",
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "uglifyjs-webpack-plugin": "^1.2.6",
         "webpack": "^4.12.0",
