--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
+        "@babel/cli": "^7.0.0-beta.51",
+        "@babel/core": "^7.0.0-beta.51",
+        "@babel/plugin-transform-runtime": "^7.0.0-beta.51",
+        "@babel/preset-env": "^7.0.0-beta.51",
+        "@babel/runtime": "^7.0.0-beta.51",
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "@octokit/rest": "^15.9.1",
@@ -13,14 +18,13 @@
         "node-gitlab-api": "^2.2.3"
     },
     "devDependencies": {
-        "babel-cli": "^6.26.0",
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "uglifyjs-webpack-plugin": "^1.2.6",
-        "webpack": "^4.12.0",
+        "webpack": "^4.12.1",
         "webpack-cli": "^3.0.8"
     },
     "scripts": {
-        "build": "node ./node_modules/webpack/bin/webpack.js"
+        "build": "node ./node_modules/webpack/bin/webpack.js && babel ./resources/dist/modules-bundle.js -o ./resources/dist/babel-modules-bundle.js --presets=@babel/preset-env --plugins @babel/plugin-transform-runtime"
     },
     "repository": {
         "type": "git",
