--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
         "gzip-js": "^0.3.2",
+        "handlebars": "^4.0.11",
         "node-gitlab-api": "^2.2.3",
         "turndown": "^4.0.2"
     },
