--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "gzip-js": "^0.3.2",
         "handlebars": "^4.0.11",
         "node-gitlab-api": "^2.2.3",
-        "turndown": "MartinBenninger/turndown#target-branch"
+        "turndown": "^4.0.2"
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
@@ -20,7 +20,6 @@
         "webpack": "^3.6.0"
     },
     "scripts": {
-        "postinstall": "cd ./node_modules/turndown && npm install",
         "build": "node ./node_modules/webpack/bin/webpack.js"
     },
     "repository": {
