--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "devDependencies": {
         "jazz-update-site-webpack-plugin": "^0.4.1",
+        "moment": "^2.22.2",
+        "string-replace-loader": "^2.1.1",
         "uglifyjs-webpack-plugin": "^1.1.4",
         "webpack": "^3.6.0"
     },
