--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
-        "@fortawesome/fontawesome": "^1.1.3",
-        "@fortawesome/fontawesome-free-solid": "^5.0.6",
-        "@octokit/rest": "^15.2.6",
+        "@fortawesome/fontawesome": "^1.1.8",
+        "@fortawesome/fontawesome-free-solid": "^5.0.13",
+        "@octokit/rest": "^15.9.4",
         "base64-js": "^1.2.1",
         "buffer": "^5.0.7",
         "clipboard": "^2.0.1",
-        "gitlab": "^3.5.0",
+        "gitlab": "^3.6.0",
         "gzip-js": "^0.3.2",
         "handlebars": "^4.0.11",
         "turndown": "^4.0.2"
@@ -19,8 +19,9 @@
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "moment": "^2.22.2",
         "string-replace-loader": "^2.1.1",
-        "uglifyjs-webpack-plugin": "^1.1.4",
-        "webpack": "^3.6.0"
+        "uglifyjs-webpack-plugin": "^1.2.7",
+        "webpack": "^4.16.2",
+        "webpack-cli": "^3.1.0"
     },
     "scripts": {
         "build": "node ./node_modules/webpack/bin/webpack.js"
