--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "string-replace-loader": "^2.1.1",
         "uglifyjs-webpack-plugin": "^1.2.7",
         "webpack": "^4.16.2",
-        "webpack-cli": "^3.1.0"
+        "webpack-cli": "^3.1.0",
+        "zip-webpack-plugin": "^3.0.0"
     },
     "scripts": {
         "build": "node ./node_modules/webpack/bin/webpack.js"
