--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "turndown": "^4.0.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.1.0",
+        "@babel/preset-env": "^7.1.0",
+        "babel-loader": "^8.0.2",
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "moment": "^2.22.2",
         "string-replace-loader": "^2.1.1",
