--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "moment": "^2.22.2",
         "remove-files-webpack-plugin": "^1.0.0",
         "string-replace-loader": "^2.1.1",
-        "uglifyjs-webpack-plugin": "^1.3.0",
+        "terser-webpack-plugin": "^1.1.0",
         "webpack": "^4.26.1",
         "webpack-cli": "^3.1.2",
         "zip-webpack-plugin": "^3.0.0"
