--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
+        "@babel/runtime": "^7.1.5",
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "@octokit/rest": "^15.18.0",
         "base64-js": "^1.2.1",
         "buffer": "^5.2.1",
         "clipboard": "^2.0.4",
-        "gitlab": "^3.11.4",
+        "gitlab": "^5.0.0-rc.3",
         "gzip-js": "^0.3.2",
         "handlebars": "^4.0.12",
         "turndown": "^4.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.1.6",
+        "@babel/plugin-transform-runtime": "^7.1.0",
+        "@babel/plugin-transform-template-literals": "^7.0.0",
         "@babel/preset-env": "^7.1.6",
         "babel-loader": "^8.0.4",
         "jazz-update-site-webpack-plugin": "^0.4.1",
