--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "gitlab": "^3.10.1",
         "gzip-js": "^0.3.2",
         "handlebars": "^4.0.11",
+        "just-handlebars-helpers": "^1.0.14",
         "turndown": "^4.0.2"
     },
     "devDependencies": {
