--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "moment": "^2.24.0",
         "remove-files-webpack-plugin": "^1.0.0",
         "string-replace-loader": "^2.1.1",
-        "uglifyjs-webpack-plugin": "^1.3.0",
+        "terser-webpack-plugin": "^1.2.2",
         "webpack": "^4.29.5",
         "webpack-cli": "^3.2.3",
         "zip-webpack-plugin": "^3.0.0"
