--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
         "buffer": "^5.2.1",
         "clipboard": "^2.0.4",
         "gitlab": "^4.5.1",
-        "gzip-js": "^0.3.2",
         "handlebars": "^4.1.1",
         "just-handlebars-helpers": "^1.0.14",
+        "pako": "^1.0.10",
         "turndown": "^5.0.3"
     },
     "devDependencies": {
