--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-loader": "^8.0.6",
         "jazz-update-site-webpack-plugin": "^0.4.1",
         "moment": "^2.24.0",
+        "prettier": "^3.1.1",
         "remove-files-webpack-plugin": "^1.1.3",
         "string-replace-loader": "^2.2.0",
         "terser-webpack-plugin": "^1.3.0",
