--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "com.siemens.bt.jazz.workitemeditor.rtcgitconnector",
-    "version": "2.5.0",
+    "name": "rtc-git-connector",
+    "version": "3.0.0",
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
-        "@octokit/rest": "^16.28.2",
-        "base64-js": "^1.2.1",
-        "buffer": "^5.2.1",
-        "clipboard": "^2.0.4",
-        "gitlab": "^4.5.1",
-        "handlebars": "^4.5.3",
-        "just-handlebars-helpers": "^1.0.14",
-        "pako": "^1.0.10",
-        "turndown": "^5.0.3"
+        "@gitbeaker/rest": "^39.33.2",
+        "@octokit/rest": "^20.0.2",
+        "base64-js": "^1.5.1",
+        "buffer": "^6.0.3",
+        "clipboard": "^2.0.11",
+        "handlebars": "^4.7.8",
+        "just-handlebars-helpers": "^1.0.19",
+        "pako": "^2.1.0",
+        "turndown": "^7.1.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.4.5",
-        "@babel/preset-env": "^7.4.5",
-        "babel-loader": "^8.0.6",
-        "jazz-update-site-webpack-plugin": "^0.4.1",
-        "moment": "^2.24.0",
-        "prettier": "^3.1.1",
-        "remove-files-webpack-plugin": "^1.1.3",
-        "string-replace-loader": "^2.2.0",
-        "terser-webpack-plugin": "^1.3.0",
-        "webpack": "^4.35.0",
-        "webpack-cli": "^3.3.5",
-        "zip-webpack-plugin": "^3.0.0"
+        "@babel/core": "^7.23.7",
+        "@babel/preset-env": "^7.23.8",
+        "@jazz-community-org/pack-jazz-web-plugin": "^2.0.0",
+        "babel-loader": "^9.1.3",
+        "moment": "^2.30.1",
+        "prettier": "^3.2.4",
+        "remove-files-webpack-plugin": "^1.5.0",
+        "string-replace-loader": "^3.1.0",
+        "terser-webpack-plugin": "^5.3.10",
+        "webpack": "^5.89.0",
+        "webpack-cli": "^5.1.4",
+        "zip-webpack-plugin": "^4.0.1"
     },
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --mode production"
+        "webpack": "webpack --config ./webpack.config.js --mode production",
+        "pack": "pack-jazz-web-plugin",
+        "build": "npm run webpack && npm run pack"
     },
     "repository": {
         "type": "git",
@@ -43,10 +45,13 @@
         "GitLab",
         "GitHub"
     ],
-    "author": "",
+    "author": "Martin Benninger, Siemens AG",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/jazz-community/rtc-git-connector/issues"
     },
-    "homepage": "https://github.com/jazz-community/rtc-git-connector#readme"
+    "homepage": "https://github.com/jazz-community/rtc-git-connector#readme",
+    "packJazzWebPlugin": {
+        "pluginId": "com.siemens.bt.jazz.workitemeditor.rtcGitConnector"
+    }
 }
