--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Connect RTC work items with various Git hosting systems",
     "main": "./resources/ui/RunConnector.js",
     "dependencies": {
+        "@babel/runtime": "^7.23.9",
         "@fortawesome/fontawesome": "^1.1.8",
         "@fortawesome/fontawesome-free-solid": "^5.0.13",
         "@gitbeaker/rest": "^39.34.1",
@@ -18,6 +19,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.23.7",
+        "@babel/plugin-transform-runtime": "^7.23.9",
         "@babel/preset-env": "^7.23.8",
         "@jazz-community-org/pack-jazz-web-plugin": "^2.0.0",
         "babel-loader": "^9.1.3",
